deployment/projects/logging/elasticsearch-30-statefulset-data.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-data
  namespace: logging
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: logging
    role: data
spec:
  serviceName: elasticsearch-data
  replicas: 1 # scale when desired
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/part-of: logging
      role: data
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
        app.kubernetes.io/part-of: logging
        role: data
    spec:
      nodeSelector:
        agentpool: esdatanodes
      tolerations:
      - key: dedicated
        operator: Equal
        value: esdata
        effect: NoSchedule
      containers:
      - name: elasticsearch-data
        image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
          requests:
            memory: 14Gi
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: elasticsearch-data-storage
          mountPath: /data
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
      volumes:
      - name: config
        configMap:
          name: elasticsearch-data-config
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-data-storage
    spec:
      storageClassName: default
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 80Gi
