deployment/projects/logging/elasticsearch-40-deployment-master-1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-master-1
  namespace: logging
  labels:
    app.kubernetes.io/name: elasticsearch-master-1
    app.kubernetes.io/part-of: logging
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch-master-1
      app.kubernetes.io/part-of: logging
      role: master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch-master-1
        app.kubernetes.io/part-of: logging
        role: master
    spec:
      nodeSelector:
        agentpool: esothernodes
      tolerations:
      - key: dedicated
        operator: Equal
        value: esother
        effect: NoSchedule
      containers:
      - name: elasticsearch-master-1
        image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
          requests:
            cpu: 1
            memory: 6Gi
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
        - name: storage
          mountPath: /data
      volumes:
      - name: config
        configMap:
          name: elasticsearch-master-1-config
      - emptyDir:
          medium: ""
        name: "storage"
