deployment/projects/logging/elasticsearch-60-deployment-client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-client
  namespace: logging
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: logging
    role: client
spec:
  replicas: 1 # scale as desired
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/part-of: logging
      role: client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
        app.kubernetes.io/part-of: logging
        role: client
    spec:
      nodeSelector:
        agentpool: esothernodes
      tolerations:
      - key: dedicated
        operator: Equal
        value: esother
        effect: NoSchedule
      containers:
      - name: elasticsearch-client
        image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1
          requests:
            cpu: 1
            memory: 6Gi
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
        - name: storage
          mountPath: /data
      volumes:
      - name: config
        configMap:
          name: elasticsearch-client-config
      - emptyDir:
          medium: ""
        name: "storage"
