deployment/projects/logging/metricbeat.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: metricbeat
  namespace: logging
  labels:
    app.kubernetes.io/name: metricbeat
    app.kubernetes.io/part-of: logging
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metricbeat
        app.kubernetes.io/part-of: logging
    spec:
      nodeSelector:
        agentpool: monpool
      serviceAccountName: metricbeat
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: metricbeat
        image: docker.elastic.co/beats/metricbeat:7.5.2
        args: [
          "-c", "/usr/share/metricbeat/config/metricbeat.yml",
          "-e",
        ]
        securityContext:
          runAsUser: 0
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: /usr/share/metricbeat/config/metricbeat.yml
          subPath: metricbeat.yml
          readOnly: true
        - name: modules
          mountPath: /usr/share/metricbeat/modules.d
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: metricbeat-config
          defaultMode: 0600
      - name: modules
        configMap:
          defaultMode: 0600
          name: metricbeat-deployment-modules
