deployment/projects/logging/elasticsearch-20-client-service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: logging 
  name: elasticsearch-client
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: logging
    role: client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: logging
    role: client
  ports:
  - name: client
    port: 9200
    protocol: TCP
  - name: transport
    port: 9300
    protocol: TCP
