deployment/projects/logging/elasticsearch-22-master-service-0.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: logging 
  name: elasticsearch-master-0
  labels:
    app.kubernetes.io/name: elasticsearch-master-0
    app.kubernetes.io/part-of: logging
    role: master
spec:
  selector:
    app.kubernetes.io/name: elasticsearch-master-0
    app.kubernetes.io/part-of: logging
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
