deployment/projects/logging/elasticsearch-70-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-client
  namespace: logging
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";

      set $isValidBeatsToken "false";

      # Begin Token Check
      if ($http_beatstoken = "REPLACE_ME_API_TOKEN_jms-test") {  # ResourceGroup: jms-test
          set $isValidBeatsToken "true";
      }
      if ($http_beatstoken = "REPLACE_ME_API_TOKEN_staging2") {  # ResourceGroup: staging2
          set $isValidBeatsToken "true";
      }
      if ($http_beatstoken = "REPLACE_ME_API_TOKEN_QE") {  # ResourceGroup: QE
          set $isValidBeatsToken "true";
      }
      if ($http_beatstoken = "REPLACE_ME_API_TOKEN_Dev") {  # ResourceGroup: Dev
          set $isValidBeatsToken "true";
      }
      # End Token Check

      if ($isValidBeatsToken = "false") {
          return 401;
      }

      more_clear_headers 'BeatsToken';
      more_set_input_headers "Authorization: Basic REPLACE_ME_BEATS_AUTH";

spec:
  tls:
    - hosts:
      - elasticsearch-shared-services-qe.nucleushealthdev.io
      secretName: tls-certificate
  rules:
  - host: elasticsearch-shared-services-qe.nucleushealthdev.io
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch-client
          servicePort: 9200
